src/components/sider/index.less
@import '../../index.less';

.sider-container {
  .ant-menu-submenu {
    color: @unhoverWordColor;

    .ant-menu-submenu-title {
      font-size: 16px;
      margin-bottom: 10px;
      text-transform: uppercase;

      &:hover {
        color: @wordColor;
      }
    }

    .ant-menu-item {
      &:hover {
        a {
          color: @hoverWordColor;
        }
      }

      &::after {
        transition: none;
      }
    }

    .ant-menu-item-selected {
      background-color: transparent;
      transition: none;

      a {
        color: @hoverWordColor;
      }

      &::before {
        display: block;
        content: '';
        border-width:7px 7px 7px 7px;
        border-style:solid;
        border-color:transparent transparent transparent #000;
        position:absolute;
        left: .2rem;
        top: 50%;
        margin-top: -7px;
      }

      &::after {
        border: none;
      }
    }
  }

  .ant-menu-submenu-arrow {
    display: none;
  }

  @media (min-width: 769px) {
    .ant-layout-sider {
        width: 0;
    }
  }
}

